--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
-streamlit
-pandas
-seaborn
-matplotlib
+streamlit==1.46.1
+pandas==2.3.0
+seaborn==0.13.2
+matplotlib==3.10.3
+numpy==2.1.3
+scikit-learn==1.7.0
+plotly==6.1.2
+opencv-python==4.10.0.84
+wordcloud==1.9.4
