--- a/requirements.txt
+++ b/requirements.txt
@@ -1,370 +1,7 @@
-absl-py==2.1.0
-aiofiles==24.1.0
-aiohappyeyeballs==2.6.1
-aiohttp==3.10.11
-aiohttp-retry==2.8.3
-aioice==0.10.1
-aiortc==1.9.0
-aiosignal==1.3.2
-aiosqlite==0.21.0
-albucore==0.0.23
-albumentations==2.0.5
-altair==5.5.0
-annotated-types==0.7.0
-ansicon==1.89.0
-anthropic==0.49.0
-anyio==4.9.0
-APScheduler==3.11.0
-argcomplete==3.6.2
-astor==0.8.1
-asttokens==2.4.1
-astunparse==1.6.3
-async-lru==2.0.5
-async-timeout==5.0.1
-asyncua==1.1.6
-attrs==25.1.0
-audioread==3.0.1
-av==12.3.0
-awsebcli==3.25
-backoff==2.2.1
-bcrypt==4.3.0
-beautifulsoup4==4.13.3
-blessed==1.21.0
-blinker==1.9.0
-blis==1.3.0
-boto3==1.35.60
-botocore==1.35.99
-Brotli==1.1.0
-cachetools==5.5.2
-catalogue==2.0.10
-cement==2.10.14
-certifi==2024.8.30
-cffi==1.17.1
-chardet==3.0.4
-charset-normalizer==3.4.0
-choreographer==1.0.9
-click==8.1.8
-cloudpathlib==0.21.1
-clr_loader==0.2.7.post0
-colorama==0.4.6
-coloredlogs==15.0.1
-comm==0.2.2
-confection==0.1.5
-contourpy==1.3.2
-cryptography==45.0.7
-cv==1.0.0
-cycler==0.12.1
-cymem==2.0.11
-Cython==3.0.12
-dacite==1.7.0
-dataclasses-json==0.6.7
-datasets==3.6.0
-debugpy==1.8.7
-decorator==5.1.1
-defusedxml==0.7.1
-Deprecated==1.2.18
-dill==0.3.8
-distro==1.9.0
-dnspython==2.7.0
-docker==7.1.0
-executing==2.1.0
-fabric==3.2.2
-fastapi==0.115.14
-fiftyone==1.6.0
-fiftyone-brain==0.21.2
-fiftyone_db==1.1.7
-filelock==3.17.0
-fire==0.7.0
-Flask==3.1.0
-flatbuffers==24.3.25
-fonttools==4.58.4
-frozenlist==1.6.2
-fsspec==2024.12.0
-ftfy==6.3.1
-future==1.0.0
-gast==0.6.0
-genai==2.1.0
-gitdb==4.0.12
-GitPython==3.1.44
-glob2==0.7
-google-crc32c==1.7.1
-google-pasta==0.2.0
-googletrans==3.1.0a0
-graphql-core==3.2.6
-grpcio==1.67.0
-h11==0.16.0
-h2==3.2.0
-h5py==3.12.1
-hf-xet==1.1.3
-hpack==3.0.0
-hstspreload==2025.1.1
-httpcore==1.0.9
-httpx==0.28.1
-huggingface-hub==0.32.4
-humanfriendly==10.0
-humanize==4.12.3
-Hypercorn==0.17.3
-hyperframe==5.2.0
-idna==2.10
-ifaddr==0.2.0
-imageio==2.37.0
-imutils==0.5.4
-inference==0.54.1
-inference-sdk==0.54.1
-inflate64==1.0.3
-iniconfig==2.1.0
-invoke==2.2.0
-ipykernel==6.29.5
-ipython==8.28.0
-ipywidgets==8.1.7
-isodate==0.7.2
-itsdangerous==2.2.0
-jax==0.5.1
-jaxlib==0.5.1
-jedi==0.19.1
-Jinja2==3.1.5
-jinxed==1.3.0
-jiter==0.10.0
-jmespath==1.0.1
-joblib==1.5.1
-jsonlines==4.0.0
-jsonschema==4.24.0
-jsonschema-specifications==2025.4.1
-jupyter_client==8.6.3
-jupyter_core==5.7.2
-jupyterlab_widgets==3.0.15
-kaleido==1.0.0
-keras==3.6.0
-kiwisolver==1.4.8
-langcodes==3.5.0
-langdetect==1.0.9
-language_data==1.3.0
-language_tool_python==2.9.4
-latest==0.6.0
-lazy_loader==0.4
-libclang==18.1.1
-librosa==0.11.0
-llvmlite==0.44.0
-lmdb==1.6.2
-logistro==1.1.0
-lxml==5.3.1
-marisa-trie==1.2.1
-Markdown==3.7
-markdown-it-py==3.0.0
-MarkupSafe==3.0.2
-marshmallow==3.26.1
-matplotlib==3.10.3
-matplotlib-inline==0.1.7
-mdurl==0.1.2
-mediapipe==0.10.21
-ml_dtypes==0.5.1
-mongoengine==0.29.1
-motor==3.6.1
-MouseInfo==0.1.3
-mpmath==1.3.0
-msgpack==1.1.1
-multidict==6.4.4
-multiprocess==0.70.16
-multivolumefile==0.2.3
-murmurhash==1.0.13
-mypy_extensions==1.1.0
-mysql-connector-python==9.2.0
-namex==0.0.8
-narwhals==1.44.0
-nbimporter==0.3.4
-nest-asyncio==1.6.0
-networkx==3.4.2
-nltk==3.9.1
-numba==0.61.2
-numpy==2.1.3
-nvidia-ml-py==12.575.51
-onnxruntime==1.21.1
-onvif-zeep-async==2.0.0
-openai==1.106.0
-opencv-contrib-python==4.10.0.84
-opencv-python==4.10.0.84
-opencv-python-headless==4.11.0.86
-opt-einsum==3.3.0
-optree==0.13.0
-orjson==3.10.18
-packaging==24.2
-paddleocr==2.10.0
-paddlepaddle==2.6.2
-paho-mqtt==1.6.1
-pandas==2.3.0
-paramiko==4.0.0
-parso==0.8.4
-pathspec==0.12.1
-pillow==11.2.1
-platformdirs==4.3.6
-plotly==6.1.2
-pluggy==1.6.0
-pooch==1.8.2
-pprintpp==0.4.0
-preshed==3.0.10
-priority==2.0.0
-prometheus-fastapi-instrumentator==6.0.0
-prometheus_client==0.22.1
-prompt_toolkit==3.0.48
-propcache==0.3.1
-protobuf==4.25.8
-psutil==6.1.0
-pure_eval==0.2.3
-py-cpuinfo==9.0.0
-py4j==0.10.9.7
-py7zr==1.0.0
-pyarrow==20.0.0
-PyAutoGUI==0.9.54
-pybase64==1.0.2
-pybcj==1.0.6
-pyclipper==1.3.0.post6
-pycparser==2.22
-pycryptodomex==3.23.0
-pydantic==2.10.6
-pydantic-settings==2.7.1
-pydantic_core==2.27.2
-pydash==8.0.5
-pydeck==0.9.1
-pydot==2.0.0
-pyee==13.0.0
-PyGetWindow==0.0.9
-Pygments==2.18.0
-PyJWT==2.10.1
-pylibsrtp==0.12.0
-pylogix==1.0.5
-pymodbus==3.8.3
-pymongo==4.9.2
-PyMsgBox==1.0.9
-PyNaCl==1.6.0
-pyOpenSSL==25.1.0
-pyparsing==3.2.3
-PyPDF2==3.0.1
-pyperclip==1.9.0
-pypiwin32==223
-pyppmd==1.2.0
-PyQt5==5.15.11
-PyQt5-Qt5==5.15.2
-PyQt5_sip==12.17.0
-pyreadline3==3.5.4
-PyRect==0.2.0
-PyScreeze==1.0.1
-pyspark==3.5.4
-pytesseract==0.3.10
-pytest==8.4.2
-python-dateutil==2.9.0.post0
-python-docx==1.1.2
-python-dotenv==1.0.1
-pythonnet==3.0.5
-pytube==15.0.0
-pytweening==1.2.0
-pytz==2025.2
-pywin32==308
-PyYAML==6.0.2
-pyzbar==0.1.9
-pyzmq==26.2.0
-pyzstd==0.17.0
-qrcode==8.0
-RapidFuzz==3.12.2
-rarfile==4.2
-redis==5.0.8
-referencing==0.36.2
-regex==2024.11.6
-requests==2.32.3
-requests-file==2.1.0
-requests-toolbelt==1.0.0
-resampy==0.4.3
-retrying==1.4.0
-rfc3986==1.5.0
-rich==13.9.2
-rpds-py==0.25.1
-rtree==1.4.0
-s3transfer==0.10.4
-safetensors==0.5.3
-scikit-image==0.25.2
-scikit-learn==1.7.0
-scipy==1.15.1
-seaborn==0.13.2
-semantic-version==2.10.0
-sentencepiece==0.2.0
-shapely==2.0.7
-shellingham==1.5.4
-simple-pid==2.0.1
-simplejson==3.20.1
-simsimd==6.2.1
-six==1.17.0
-slack_sdk==3.33.5
-smart-open==7.1.0
-smmap==5.0.2
-sniffio==1.3.1
-sortedcontainers==2.4.0
-sounddevice==0.5.1
-soundfile==0.13.1
-soupsieve==2.6
-soxr==0.5.0.post1
-spacy==3.8.7
-spacy-legacy==3.0.12
-spacy-loggers==1.0.5
-srsly==2.5.1
-sse-starlette==0.10.3
-sseclient-py==1.8.0
-stack-data==0.6.3
-starlette==0.46.2
-strawberry-graphql==0.275.3
-streamlit==1.46.1
-stringzilla==3.12.3
-structlog==24.4.0
-supervision==0.25.1
-sympy==1.13.1
-tabulate==0.9.0
-tenacity==9.1.2
-tensorboard==2.19.0
-tensorboard-data-server==0.7.2
-tensorflow==2.19.0
-tensorflow-intel==2.17.0
-tensorflow-io-gcs-filesystem==0.31.0
-termcolor==2.5.0
-textblob==0.19.0
-texttable==1.7.0
-tf_keras==2.19.0
-thinc==8.3.6
-threadpoolctl==3.6.0
-tifffile==2025.3.13
-tiktoken==0.3.3
-tldextract==5.1.3
-tokenizers==0.21.2
-toml==0.10.2
-torch==2.6.0
-torchvision==0.21.0
-tornado==6.4.1
-tqdm==4.66.5
-traitlets==5.14.3
-transformers==4.53.2
-twilio==9.3.8
-typer==0.16.0
-typing-inspect==0.9.0
-typing_extensions==4.12.2
-tzdata==2025.2
-tzlocal==5.3.1
-ultralytics==8.3.70
-ultralytics-thop==2.0.14
-universal-analytics-python3==1.1.1
-urllib3==1.26.20
-voxel51-eta==0.14.2
-wait-for2==0.3.2
-wasabi==1.1.3
-watchdog==6.0.0
-wcwidth==0.2.13
-weasel==0.4.1
-Werkzeug==3.1.3
-widgetsnbextension==4.0.14
-wordcloud==1.9.4
-wrapt==1.16.0
-wsproto==1.2.0
-xgboost==3.0.2
-xmltodict==0.14.2
-xxhash==3.5.0
-yarl==1.20.0
-youtube-transcript-api==1.2.1
-zeep==4.3.1
-zxing-cpp==2.2.0
-4
+flask
+gunicorn
+pandas
+numpy
+python-dotenv
+openai
+werkzeug
